Query actualizada con /search y actualizado Insomnia
